--- a/tests/test2.html
+++ b/tests/test2.html
@@ -2,7 +2,7 @@
 <head>
 	<title>ceci est un test</title>
 	<meta charset='utf-8'>
-
+	<link rel="stylesheet" href="font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="alignStyle.css">
 	<script type="text/javascript" src="DOM_modif"></script>
 	</head>
@@ -47,15 +47,15 @@
 	<option value=""></option><br/>
 	<option value=""></option><br/>
 	</select><br>
-	<button id ="submit" onclick="submit">submit</button>  
+	<button id ="submit" onclick="submit"><i class="fa fa-play"></i>submit</button>  
 	</form>
 </div>
 </div>
 <div id="button1">
 	
-	<button id ="suivant">suivant</button>
-	<button id ="precedent">precedent</button>    
-	<button id ="final">final</button>  
+	<button id ="suivant"><i class="fa fa-step-forward"></i>suivant</button>
+	<button id ="precedent"><i class="fa fa-step-backward"></i>precedent</button>
+	<button id ="final"><i class="fa fa-stop"></i>
 </div>
 
 <footer>
